src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_casted_chars_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%mainPROG = type { i8, i16 }

@mainPROG_instance = global %mainPROG zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [2 x i8] c"B\00"
@utf16_literal_0 = private unnamed_addr constant [2 x i16] [i16 65, i16 0]

define void @mainPROG(%mainPROG* %0) {
entry:
  %x = getelementptr inbounds %mainPROG, %mainPROG* %0, i32 0, i32 0
  %y = getelementptr inbounds %mainPROG, %mainPROG* %0, i32 0, i32 1
  store i8 65, i8* %x, align [filtered]
  store i16 66, i16* %y, align [filtered]
  ret void
}
