src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_date_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i32, i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %w = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  %y = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 2
  %z = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 3
  store i32 56190123, ptr %w, align [filtered]
  store i32 56190123, ptr %w, align [filtered]
  store i32 100012, ptr %x, align [filtered]
  store i32 100012, ptr %x, align [filtered]
  store i32 465436800, ptr %y, align [filtered]
  store i32 0, ptr %y, align [filtered]
  store i32 465509714, ptr %z, align [filtered]
  store i32 58804, ptr %z, align [filtered]
  store i32 58804, ptr %z, align [filtered]
  store i32 946757700, ptr %z, align [filtered]
  store i32 946757700, ptr %z, align [filtered]
  store i32 946757708, ptr %z, align [filtered]
  ret void
}
