src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_local_temp_var_initialization.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { i16 }
%prg = type {}

@foo_instance = global %foo { i16 7 }
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %x = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %y = alloca i16, align [filtered]
  %z = alloca i16, align [filtered]
  store i16 0, i16* %y, align [filtered]
  store i16 9, i16* %z, align [filtered]
  %load_z = load i16, i16* %z, align [filtered]
  %1 = sext i16 %load_z to i32
  %tmpVar = add i32 %1, 1
  %2 = trunc i32 %tmpVar to i16
  store i16 %2, i16* %y, align [filtered]
  ret void
}

define void @prg(%prg* %0) {
entry:
  call void @foo(%foo* @foo_instance)
  ret void
}
