src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_long_date_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i64, i64, i64, i64 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %w = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 3
  store i64 100012006003, i64* %w, align [filtered]
  store i64 100012006003, i64* %w, align [filtered]
  store i64 465436800000000000, i64* %x, align [filtered]
  store i64 0, i64* %x, align [filtered]
  store i64 465509714000000000, i64* %y, align [filtered]
  store i64 58804123456789, i64* %y, align [filtered]
  store i64 56190999999999, i64* %z, align [filtered]
  store i64 56190123456000, i64* %z, align [filtered]
  ret void
}
