src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_negated_combined_expressions_generates_void_function_and_struct_and_body.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_y = load i8, i8* %y, align [filtered]
  %1 = icmp ne i8 %load_y, 0
  br i1 %1, label %2, label %3

2:                                                ; preds = %entry
  %load_z = load i32, i32* %z, align [filtered]
  %tmpVar = icmp sge i32 %load_z, 5
  br label %3

3:                                                ; preds = %2, %entry
  %4 = phi i1 [ %1, %entry ], [ %tmpVar, %2 ]
  %load_z1 = load i32, i32* %z, align [filtered]
  %tmpVar2 = icmp sle i32 %load_z1, 6
  %tmpVar3 = xor i1 %tmpVar2, true
  br i1 %tmpVar3, label %7, label %5

5:                                                ; preds = %3
  %load_y4 = load i8, i8* %y, align [filtered]
  %6 = icmp ne i8 %load_y4, 0
  br label %7

7:                                                ; preds = %5, %3
  %8 = phi i1 [ %tmpVar3, %3 ], [ %6, %5 ]
  ret void
}
