src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_negated_expressions_generates_void_function_and_struct_and_body.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i8, i8* %x, align [filtered]
  %1 = icmp ne i8 %load_x, 0
  %tmpVar = xor i1 %1, true
  %load_x1 = load i8, i8* %x, align [filtered]
  %2 = icmp ne i8 %load_x1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %entry
  %load_y = load i8, i8* %y, align [filtered]
  %4 = icmp ne i8 %load_y, 0
  %tmpVar2 = xor i1 %4, true
  br label %5

5:                                                ; preds = %3, %entry
  %6 = phi i1 [ %2, %entry ], [ %tmpVar2, %3 ]
  ret void
}
