src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_or_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  %load_x = load i8, ptr %x, align [filtered]
  %1 = icmp ne i8 %load_x, 0
  %load_y = load i8, ptr %y, align [filtered]
  %2 = icmp ne i8 %load_y, 0
  %3 = or i1 %1, %2
  ret void
}
