src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_real_additions.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { float, float, float }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %z = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  store float 1.237500e+01, float* %x, align [filtered]
  store float 2.500000e-01, float* %y, align [filtered]
  %load_x = load float, float* %x, align [filtered]
  %load_y = load float, float* %y, align [filtered]
  %tmpVar = fadd float %load_x, %load_y
  store float %tmpVar, float* %z, align [filtered]
  ret void
}
