src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_real_assignment.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { float }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  store float 1.562500e-01, float* %y, align [filtered]
  store float 1.000000e+02, float* %y, align [filtered]
  store float 1.000000e+03, float* %y, align [filtered]
  ret void
}
